MAGECLOUD-2697: Update HTML and text for Magento Commerce Cloud - Admin URL email

--- a/views/reset_password.html.twig
+++ b/views/reset_password.html.twig
@@ -85,9 +85,7 @@
                                                         To log into the Magento Admin panel, you must reset your
                                                         password.
                                                         <br>
-                                                        <a style="color: #26a2aa;text-decoration: none;"
-                                                           href="{{ admin_url }}/index.php/admin/admin/auth/forgotpassword">{{ admin_url }}
-                                                            /index.php/admin/admin/auth/forgotpassword</a>.
+                                                        <a style="color: #26a2aa;text-decoration: none;" href="{{ admin_url }}/admin/auth/forgotpassword">{{ admin_url }}/admin/auth/forgotpassword</a>.
                                                     </p>
                                                     <p style="font: 16px/22px 'Graphik', sans-serif;">
                                                         We also sent a password reset email with the same link to
